/*
 * $Id: ChangeLog,v 1.3820 2005/02/15 06:13:22 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-02-15 10:48 UTC+0100 Patrick Mast <patrick@xHarbour.com>
  * doc/en/set.txt
    + Added doc's for new locking schemes (4 and 5)

2005-02-14 22:11 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/vm/hvm.c
    ! Fixed simple but serious bug in latest change to bit operators.

     /* I also suggest changing if() order to first check for both NUMERIC values,
        which should be the most common case. */

2005-01-11 10:25 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * include/hbstack.h
    - altered to respect setting of #define HB_NO_DEFAULT_API_MACROS

2005-02-14 22:10 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbset.h
  * xharbour/include/hbrdddbf.h
  * xharbour/source/rdd/dbf1.c
    + added new locking schemes:
      HB_SET_DBFLOCK_CL53EXT = 4
        Clipper's ntxlock2.obj - I'm not sure it's exactly the same
        Clipper documentation gives differ information here - I will
        have to make my own tests checking what Clipper really locks
        so be careful with using it simultaneously with Clipper
        application in network environment. Anyhow for xHarbour
        applications could be safely used. It emulates shared locks
        so it's very efficient in systems which doesn't have it and
        moves maximum file size to 4'000'000'000 - probably the best
        locking mode for FAT32. It could be used for DBFNTX and DBFCDX.
      HB_SET_DBFLOCK_XHB64 = 5
        xHarbour locking scheme for long files - over 4GB. It needs
        long file support in OS. Effectively it does not reduce file size.
        Please test it in Windows - I made test in Linux and it works
        correctly.

  * xharbour/include/hbrddcdx.h
  * xharbour/include/hbrddntx.h