@@ -1,5 +1,5 @@
 /*
- * $Id: hvm.c,v 1.436 2005/02/14 18:44:48 snaiperis Exp $
+ * $Id: hvm.c,v 1.437 2005/02/15 06:13:29 ronpinkas Exp $
  */
 
 /*
@@ -5124,7 +5124,13 @@ static void hb_vmBitAnd( void )
    pItem2 = hb_stackItemFromTop( -1 );
    pItem1 = hb_stackItemFromTop( -2 );
 
-   if( HB_IS_STRING( pItem1 ) &&  HB_IS_STRING( pItem2 ) )
+   if( HB_IS_NUMBER( pItem1 ) && HB_IS_NUMERIC( pItem2 ) )
+   {
+      pItem1->item.asLong.value = hb_itemGetNL( pItem1 ) & hb_itemGetNL( pItem2 );
+      pItem1->type = HB_IT_LONG;
+      hb_stackPop();
+   }
+   else if( HB_IS_STRING( pItem1 ) &&  HB_IS_STRING( pItem2 ) )
    {
       char*  pString1 = pItem1->item.asString.value;
       ULONG  ulLen1 = pItem1->item.asString.length;
@@ -5237,7 +5243,13 @@ static void hb_vmBitOr( void )
    pItem2 = hb_stackItemFromTop( -1 );
    pItem1 = hb_stackItemFromTop( -2 );
 
-   if( HB_IS_STRING( pItem1 ) &&  HB_IS_STRING( pItem2 ) )
+   if( HB_IS_NUMBER( pItem1 ) && HB_IS_NUMERIC( pItem2 ) )
+   {
+      pItem1->item.asLong.value = hb_itemGetNL( pItem1 ) | hb_itemGetNL( pItem2 );
+      pItem1->type = HB_IT_LONG;
+      hb_stackPop();
+   }
+   else if( HB_IS_STRING( pItem1 ) &&  HB_IS_STRING( pItem2 ) )
    {
       char*  pString1 = pItem1->item.asString.value;
       ULONG  ulLen1 = pItem1->item.asString.length;
@@ -5351,7 +5363,13 @@ static void hb_vmBitXor( void )
    pItem2 = hb_stackItemFromTop( -1 );
    pItem1 = hb_stackItemFromTop( -2 );
 
-   if( HB_IS_STRING( pItem1 ) &&  HB_IS_STRING( pItem2 ) )
+   if( HB_IS_NUMBER( pItem1 ) && HB_IS_NUMERIC( pItem2 ) )
+   {
+      pItem1->item.asLong.value = hb_itemGetNL( pItem1 ) ^ hb_itemGetNL( pItem2 );
+      pItem1->type = HB_IT_LONG;
+      hb_stackPop();
+   }
+   else if( HB_IS_STRING( pItem1 ) &&  HB_IS_STRING( pItem2 ) )
    {
       char*  pString1 = pItem1->item.asString.value;
       ULONG  ulLen1 = pItem1->item.asString.length;
