@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3820 2005/02/15 06:13:22 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.3821 2005/02/15 09:53:08 patrickmast Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-02-15 14:45 UTC+0200 Mindaugas Kavaliauskas <dbtopas at dbtopas.lt>
+  * source/vm/hvm.c
+   * optimized bit operators to check first if both arguments are numeric
 
 2005-02-15 10:48 UTC+0100 Patrick Mast <patrick@xHarbour.com>
   * doc/en/set.txt
